--- a/style.css
+++ b/style.css
@@ -4,5 +4,22 @@
     border:2px solid black;
 }
 #boot{
-    background-color: moccasin;
+    background-color: rgb(237, 127, 239);
+}
+#what{
+    background-color:rgb(131, 182, 228);
+}
+
+#where{
+    background-color:rgb(255, 222, 133);
+}
+
+#where img{
+height:200px;
+width:200px;
+}
+.carousel-inner img{
+    height: 500px;
+    width:100%;
+
 }
